objects/hed__Course_Offering__c.object
<CustomObject>
    <description>Joins Courses and Terms to contain information related to a single occurrence of a Course.</description>
    <label>Course Offering</label>
    <nameField>
        <label>Course Offering ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Offerings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Modalidad__c</fullName>
        <label>Modalidad</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mixta</fullName>
                </value>
                <value>
                    <fullName>Presencial</fullName>
                </value>
                <value>
                    <fullName>Virtual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Term__c</fullName>
        <description>Lookup to the Term record that represents when this Course Offering takes place.</description>
        <label>Term</label>
        <referenceTo>hed__Term__c</referenceTo>
        <relationshipLabel>Course Offerings</relationshipLabel>
        <relationshipName>Course_Offerings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>hed__Course__c</fullName>
        <description>Lookup to the Course record that this Course Offering is associated with.</description>
        <label>Course</label>
        <referenceTo>hed__Course__c</referenceTo>
        <relationshipLabel>Course Offerings</relationshipLabel>
        <relationshipName>Course_Offerings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>hed__Faculty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the lead instructor for this Course Offering.</description>
        <inlineHelpText>Lookup to the lead instructor for this Course Offering.</inlineHelpText>
        <label>Primary Faculty</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Course Offerings</relationshipLabel>
        <relationshipName>Courses_Taught</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Capacity__c</fullName>
        <description>The maximum number of students for this Course Offering.</description>
        <inlineHelpText>The maximum number of students for this Course Offering.</inlineHelpText>
        <label>Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__End_Date__c</fullName>
        <description>The date of the last session for this Course Offering.</description>
        <inlineHelpText>The date of the last session for this Course Offering.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Facility associated with the Course Offering.</description>
        <inlineHelpText>The Facility where this Course Offering will take place.</inlineHelpText>
        <label>Facility</label>
        <referenceTo>hed__Facility__c</referenceTo>
        <relationshipLabel>Course Offerings</relationshipLabel>
        <relationshipName>Course_Offerings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Section_ID__c</fullName>
        <description>The Section ID for this Course Offering. Section ID is typically used when a Course offers multiple sections during a single Term.</description>
        <inlineHelpText>The Section ID for this Course Offering. Section ID is typically used when a Course offers multiple sections during a single Term.</inlineHelpText>
        <label>Section ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Start_Date__c</fullName>
        <description>The date of the first session for this Course Offering.</description>
        <inlineHelpText>The date of the first session for this Course Offering.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Time_Block__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Time Block record that represents the start and end times for this Course Offering.</description>
        <label>Time Block</label>
        <referenceTo>hed__Time_Block__c</referenceTo>
        <relationshipLabel>Course Offerings</relationshipLabel>
        <relationshipName>Time_Blocks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Programa_Acadm_mico__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relación a la cuenta de tipo Academic Program</description>
        <label>Programa Académico</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Course Offerings</relationshipLabel>
        <relationshipName>Course_Offerings</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>hed__All</fullName>
        <columns>NAME</columns>
        <columns>hed__Course__c</columns>
        <columns>Modalidad__c</columns>
        <columns>Programa_Acadm_mico__c</columns>
        <columns>hed__Term__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>